# video-streamer

./: .gitmodules  CMakeLists.txt
video-streamer/: CMakeLists.txt  video-streamer-app.cpp
